apps/teams/team-product/services/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    guestbook.mydomain.com/app: guestbook-ui
