apps/teams/team-product/services/api/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: guestbook-ui
spec:
  gateways:
    - istio-gateways/public
  hosts:
    - guestbook.mydomain.com
  tls:
    - match:
        - port: 443
          sniHosts:
            - guestbook.mydomain.com
      route:
        - destination:
            subset: stable
            host: guestbook-ui.product.svc.cluster.local
            port:
              number: 80
          weight: 100
        - destination:
            subset: canary
            host: guestbook-ui.product.svc.cluster.local
            port:
              number: 80
          weight: 0
